<resources>
    <string name="app_name">AppFarmacia</string>
    <!--   Login   -->
    <string name="Ingresa_nom">Ingresa tu correo</string>
    <string name="Contrasena">Contraseña</string>
    <string name="inicia_sesion">Iniciar Sesión</string>
    <string name="registrarse_login">Registrate !!!</string>

    <!--   Registrarse      -->
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="codigo_postal">Cod. Pais</string>
    <string name="celular">Celular</string>
    <string name="documento">Tipo D.</string>
    <string name="DNI">DNI</string>
    <string name="correo">Correo electronico</string>
    <string name="nacimiento">Fecha de nacimiento</string>
    <string name="contrasena_registro">Contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>

    <string name="tipos_correo">Correo Ejemplo</string>

    <!-- Mensaje ocultos -->
    <string name="ht_correo">ejemplo@ejemplo.com</string>
    <string name="ht_fc_nacimiento">aaaa-mm-dd</string>
    <string name="ht_contrasenia">roG1@123</string>


    <!--  Principal activity   -->
    <string name="salir" translatable="false">Salir</string>
    <string name="producto" translatable="false">Productos</string>

    <!--   Solicitud activity   -->
    <string name="mensaje_solicitud">¡Gracias por su solicitud de compra!</string>
    <string name="aceptar2">Aceptar</string>

    <!--   Detalle activity   -->
    <string name="siguiente">Siguiente</string>
    <string name="regresar">Regresar</string>
    <string name="total">Total</string>

    <!-- NO LOGUEADO BOT  NO TRADUCIDO -->
    <string name="megafarma" translatable="false">Megafarma</string>
    <string name="bot_iniciar" translatable="false">Iniciar Sesion</string>
    <!-- LOGUEADO BOT -->
    <string name="Perfil" translatable="false">Perfil</string>
    <string name="Carrito" translatable="false">Carrito</string>
    <string name="Cerrar_sesion" translatable="false">Cerrar Sesion</string>
    <!--  DETALLE BOT   -->
    <string name="atras" translatable="false">Atras</string>
    <string name="Salir" translatable="false">Salir</string>

</resources>