<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_registrar"
    android:orientation="vertical"
    tools:context=".RegistrarActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/botones"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="25dp"
                android:text="@string/registrarse_login"
                android:textColor="@color/white"
                android:textSize="25dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--   parte del formulario   -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:hint="@string/nombre"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/txt_Nombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/apellido"
                android:paddingTop="10dp"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/txt_Apellido"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/celular"
                android:paddingTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="9"
                app:endIconMode="clear_text"
                app:counterTextColor="@color/white"
                app:startIconDrawable="@drawable/celar">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/txt_Celular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/DNI"
                android:paddingTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="8"
                app:endIconMode="clear_text"
                app:counterTextColor="@color/white"
                app:startIconDrawable="@drawable/documento">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/txt_Dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"

                android:paddingTop="10dp"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/white"
                app:startIconDrawable="@drawable/correo"
                android:hint="@string/correo"
                app:helperText="@string/ht_correo"
                app:helperTextTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_Correo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="5dp"
                app:helperTextTextColor="@color/white"
                app:helperText="@string/ht_fc_nacimiento"
                android:paddingTop="10dp"
                app:endIconMode="clear_text"
                app:counterTextColor="@color/white"
                app:startIconDrawable="@drawable/fecha"
                android:hint="@string/nacimiento"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_Fecha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="5dp"
               app:helperText="@string/ht_contrasenia"
                app:helperTextTextColor="@color/white"
                android:paddingTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="8"
                app:endIconMode="password_toggle"
                app:counterTextColor="@color/white"
                app:startIconDrawable="@drawable/candado">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_Contrasenia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Contrasena"
                    android:inputType="textPassword"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <Button
                android:id="@+id/bt_Aceptar"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="@color/verde_aceptar"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/aceptar"
                android:textSize="15dp"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/bt_Cancelar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="@color/rojo_cancelar"
                android:paddingTop="8dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:paddingBottom="8dp"
                android:text="@string/cancelar"
                android:textSize="15dp"
                android:textColor="@color/white"/>


        </LinearLayout>
    </LinearLayout>
</ScrollView>
